--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,8 +1,8 @@
 
-ftp.server.ip=10.211.55.3
+ftp.server.ip=47.94.156.87
 ftp.user=ftpuser
-ftp.pass=123456
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.pass=l330673934
+ftp.server.http.prefix=http://img.huanliu.org/
 
 
 alipay.callback.url=http://9jinv9.natappfree.cc/order/alipay_callback.do
