--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,7 +1,9 @@
 
 ftp.server.ip=47.94.156.87
+#ftp.server.ip=10.211.55.3
 ftp.user=ftpuser
 ftp.pass=l330673934
+#ftp.pass=123456
 ftp.server.http.prefix=http://img.huanliu.org/
 
 
