--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,13 +1,14 @@
-
 ftp.server.ip=47.95.196.241
-#ftp.server.ip=10.211.55.3
 ftp.user=ftpuser
 ftp.pass=l330673934
-#ftp.pass=123456
 ftp.server.http.prefix=http://img.huanliu.org/
+alipay.callback.url=http://www.huanliu.org/order/alipay_callback.do
 
-
-alipay.callback.url=http://9jinv9.natappfree.cc/order/alipay_callback.do
+#ftp.server.ip=192.168.1.106
+#ftp.user=ftpuser
+#ftp.pass=123456
+#ftp.server.http.prefix=http://img.happymmall.org/
+#alipay.callback.url=http://happymall.natapp1.cc/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
