--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -37,3 +37,8 @@ redis.test.return=false
 
 #redis config end
 
+#closeOrderTaskTime start
+
+close.order.task.time.hour=2
+
+#closeORderTaskTime end
