--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,19 @@
       <artifactId>lombok</artifactId>
       <version>1.16.18</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-avro</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
   </dependencies>
 
 
