--- a/src/main/resources.prod/mmall.properties
+++ b/src/main/resources.prod/mmall.properties
@@ -38,4 +38,11 @@ close.order.task.time.hour=2
 #毫秒数
 lock.timeout=5000
 
-#closeORderTaskTime end
+#closeOrderTaskTime end
+
+#cookie config start
+
+cookie.domain=.huanliu.org
+cookie.login.token.name=mmall_login_token
+
+#cookie config end
