--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -42,7 +42,7 @@ lock.timeout=5000
 
 #cookie config start
 
-cookie.domain=.happymmall.com
+cookie.domain=.huange.com
 cookie.login.token.name=mmall_login_token
 
 #cookie config end
